<resources>
    <string name="app_name">Inventory</string>

    <!-- titles -->
    <string name="detail_activity_add_product">Add a Product</string>
    <string name="detail_activity_product_detail">Product Detail</string>

    <!-- empty view -->
    <string name="empty_view_title">Whoops! No product available yet.</string>
    <string name="empty_view_subtitle">Please add a new product.</string>

    <!-- product attributes -->
    <string name="name">Name</string>
    <string name="price">Price($) </string>
    <string name="quantity">Quantity </string>
    <string name="supplier_name">Supplier</string>
    <string name="supplier_email">Email</string>
    <string name="supplier_tel">Tel</string>
    <string name="image">Image</string>

    <!-- buttons and menus -->
    <string name="sale_button">Sale</string>
    <string name="main_activity_dummy_data_menu">Insert Dummy Data</string>
    <string name="main_activity_delete_all_menu">Delete All</string>
    <string name="main_activity_add_product">Add product</string>
    <string name="detail_activity_order_more">Order More</string>
    <string name="detail_activity_delete_record">Delete Product</string>
    <string name="add_activity_save">Save</string>
    <string name="load_image">Load Image</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>

    <!-- toast messages -->
    <string name="detail_activity_insert_unsuccessfully">Error inserting product</string>
    <string name="detail_activity_insert_successfully">Product saved</string>
    <string name="detail_activity_update_unsuccessfully">Error updating product</string>
    <string name="detail_activity_update_successfully">Product updated</string>
    <string name="detail_activity_delete_unsuccessfully">Error deleting product</string>
    <string name="detail_activity_delete_successfully">Product deleted</string>
    <string name="require_name">Product requires a name</string>
    <string name="require_price">Product requires valid price</string>
    <string name="require_quantity">Product requires valid quantity</string>
    <string name="require_supplier">Product requires a supplier</string>
    <string name="require_image">Please insert an image</string>

    <!-- AlertDialog -->
    <string name="unsaved_changes_dialog_msg">Are you sure to quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Are you sure to delete the product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="by_phone">Order via Phone</string>
    <string name="by_email">Order via Email</string>
</resources>
