<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/product_edit_text"
            android:hint="@string/name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price_edit_text"
            style="@style/product_edit_text"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/quantity" />

        <LinearLayout style="@style/product_edit_text">

            <Button
                android:id="@+id/decrease_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease" />

            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/increase_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/supplier_name_edit_text"
            style="@style/product_edit_text"
            android:hint="@string/supplier_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/supplier_email" />

        <LinearLayout style="@style/product_edit_text">

            <EditText
                android:id="@+id/supplier_email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/supplier_email"
                android:inputType="textEmailAddress" />

            <ImageButton
                android:id="@+id/order_via_email_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_black_24dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/supplier_tel" />

        <LinearLayout style="@style/product_edit_text">

            <EditText
                android:id="@+id/supplier_tel_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/supplier_tel"
                android:inputType="phone" />

            <ImageButton
                android:id="@+id/order_via_tel_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_black_24dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/add_item"
            android:text="@string/image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/load_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_image" />

            <ImageView
                android:id="@+id/product_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/picture_min_height"
                android:src="@drawable/no_photo" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>